--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,2 +1,7 @@
-cc.welcomeMessage=This is production
-cc.about=Content Calendar API in production environment
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=postgresql://postgres:mlGHuQLyCk9dt73YiYSI@containers-us-west-47.railway.app:7792/railway
+spring.datasource.username=postgres
+spring.datasource.password=mlGHuQLyCk9dt73YiYSI
+
+spring.sql.init.mode=always
+
