--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,10 +2,10 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=password
 
-spring.datasource.url=jdbc:postgresql://postgres:mlGHuQLyCk9dt73YiYSI@containers-us-west-47.railway.app:7792/railway
+spring.datasource.url=jdbc:postgresql://containers-us-west-47.railway.app:7792/railway
 spring.datasource.username=postgres
 spring.datasource.password=mlGHuQLyCk9dt73YiYSI
 
 #spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 
